--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "format": "remark --use \"remark-mdx=printWidth:80\" docs/**/*.mdx -o"
+    "format": "remark --use \"remark-mdx\" docs/**/*.mdx -o"
   },
   "dependencies": {
     "@docusaurus/core": "3.5.2",
