Fix Docusaurus CircleCI (#13646)
Signed-off-by: Daniel Lok <daniel.lok@databricks.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
   # TODO: Add a job to build the python and java api reference
   build_doc:
     docker:
-      - image: cimg/python:3.9
+      - image: cimg/python:3.9-node
 
     steps:
       - checkout
