Add "yarn preview" command to docusaurus (#13650)
Signed-off-by: Daniel Lok <daniel.lok@databricks.com>

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "yarn build && yarn serve",
+    "start": "docusaurus start",
+    "preview": "yarn build && yarn serve",
     "build": "docusaurus build",
     "build-api-docs": "python scripts/build-api-docs.py",
     "update-api-modules": "tsx scripts/update-api-modules.ts",
