--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,8 @@ jobs:
           name: Show package release dates
           command: |
             python dev/show_package_release_dates.py
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
           name: Build documentation
           working_directory: docs
@@ -80,9 +82,7 @@ jobs:
             PR_PREVIEW: "true"
           command: |
             yarn install
-            yarn build-api-docs:no-r
-            yarn convert-notebooks
-            yarn build
+            yarn build-all
             python changed_pages.py
       - run:
           name: Test examples
